--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "androidgraffitiv2.brendan.com.vg_v2"
+        applicationId "androidgraffitiv2.brendan.com.tagd"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
@@ -20,9 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':openCVLibrary2410')
+    compile files('libs/flickrj-android-2.0.0.jar')
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
 
 buildscript {
