--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="androidgraffitiv2.brendan.com.vg_v2" >
+    package="androidgraffitiv2.brendan.com.tagd" >
 
     <permission
-        android:name="androidgraffitiv2.brendan.com.vg_v2.permission.MAPS_RECEIVE"
+        android:name="androidgraffitiv2.brendan.com.tagd.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
 
     <uses-permission android:name="androidgraffitiv2.brendan.com.vg_v2.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -18,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="androidgraffitiv2.brendan.com.tagd.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -28,10 +35,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TestActivity"
+            android:name="androidgraffitiv2.brendan.com.tagd.TestActivity"
             android:label="@string/title_activity_test"
             android:screenOrientation="portrait">
         </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBOTbgdCSdrQciYntUbMEOe-rBJn5O9Vqc"/>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
+        <uses-library android:name="com.google.android.maps"/>
+
 
     </application>
 
