--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -24,15 +24,32 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name="androidgraffitiv2.brendan.com.tagd.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:name="androidgraffitiv2.brendan.com.tagd.LoginActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="tagd"
+                    android:scheme="oauth" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="androidgraffitiv2.brendan.com.tagd.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+
         </activity>
         <activity
             android:name="androidgraffitiv2.brendan.com.tagd.TestActivity"
