--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':openCVLibrary2410')
     compile files('libs/flickrj-android-2.0.0.jar')
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('libs/scribe-codepath-0.0.3.jar')
+    compile 'com.loopj.android:android-async-http:1.4.6'
+    compile files('libs/activeandroid-3.0.jar')
 }
 
 buildscript {
