--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name = "com.activeandroid.app.Application" >
 
         <activity
             android:name="androidgraffitiv2.brendan.com.tagd.LoginActivity"
@@ -64,6 +65,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
+
+        <meta-data android:name="AA_DB_NAME" android:value="Pickrand.db"  />
+        <meta-data android:name="AA_DB_VERSION" android:value="5"  />
 
         <uses-library android:name="com.google.android.maps"/>
 
