--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="androidgraffitiv2.brendan.com.vg_v2.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -64,9 +65,21 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity
+            android:name="androidgraffitiv2.brendan.com.tagd.MapActivity"
+            android:label="MapActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name="androidgraffitiv2.brendan.com.tagd.ScreenSlidePager"
+            android:label="SliderActivity"
+            android:screenOrientation="portrait">
+
+            </activity>
+
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBOTbgdCSdrQciYntUbMEOe-rBJn5O9Vqc"/>
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDlhgAl6vSWdkmNXgTHT9DdsvqcAvr3A9Q"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
