--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 12 00:00:15 MDT 2015
-sdk.dir=C\:\\Users\\Alex Eisenach\\AppData\\Local\\Android\\sdk
+#Fri Apr 03 21:20:37 MDT 2015
+sdk.dir=/Users/Brendan/Library/Android/sdk
